# Fraud-Detection-XGBoost

./: XGBoost_Fraud_Detection.py  fraud_classifier.onnx  fraud_classifier.ubj  fraud_detection_xgboost.model  inference.py  nvidia-pip.sh  pyproject.toml  train-gpu.py
