[project]
name = "fraud-detection-xgboost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperopt>=0.2.7",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "setuptools>=75.8.1",
    "xgboost>=2.1.4",
]
